# se-cvla

./: .gitignore  README.md  SE_CVLA_Demo.ipynb  environment.yaml  pyproject.toml
configs/: base.yaml
configs/data/: physicalai_av.yaml
configs/experiment/: exp1_ood_generalization.yaml  exp2_5_configs.yaml  stage1_pretrain.yaml
configs/model/: se_cvla_10b.yaml
configs/training/: stage2_closedloop.yaml  stage3_selfevolving.yaml
data/augmentation/: causal_augmentation.py
data/loaders/: physicalai_av_dataset.py
evaluation/metrics/: se_cvla_metrics.py
models/: __init__.py  se_cvla.py
models/counterfactual/: cf_engine.py
models/encoders/: multimodal_encoder.py
models/policy/: causal_policy.py
models/scm/: dynamic_scm_learner.py
models/uncertainty/: uncertainty_module.py
notebooks/: 01_dataset_exploration.ipynb  02_scm_visualization.ipynb  03_counterfactual_analysis.ipynb
scripts/: closed_loop_eval.py  evaluate.py  train.py
simulation/interfaces/: closed_loop_interface.py
simulation/wrappers/: physicalai_wrapper.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_losses_and_metrics.py  test_scm.py
training/callbacks/: se_cvla_callbacks.py
training/losses/: se_cvla_loss.py
